# SFMLRatandSnakeGame

./: AStar.cpp  AStar.h  BannerManager.cpp  BannerManager.h  CMakeLists.txt  Character.cpp  Character.h  Engine.cpp  Engine.h  Makefile.win  Map.cpp  Map.h  Menu.cpp  Menu.h  Node.cpp  Node.h  Project1.dev  Project1.layout  README.md  WorldManager.cpp  WorldManager.h  main.cpp
backup/: Character.cpp  Character.h  Engine.cpp  Engine.h  Makefile.win  Project1.dev  Project1.layout  WorldManager.h  main.cpp
